--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -5,6 +5,7 @@
     <!-- Надпись к сообщениям клиента -->
     <string name="agent_name_you">Usted</string>
     <string name="Agent.DisplayName.Deleted">Agente borrado</string>
+    <string name="Camera.Access.Description">Esta aplicación necesita permiso para usar tu cámara</string>
     <!-- Normally user iOS device doesn't return "Restricted" camera access status. But for test purposes we've added an alert with this string message anyway. -->
     <string name="Camera.Access.Restricted">Acceso a la cámara denegado</string>
     <string name="Camera.Access.Suggestion">Necesitamos permiso para acceder a la cámara para que pueda tomar fotos</string>
@@ -41,6 +42,7 @@
     <string name="common_unknown_error">Error desconocido</string>
     <string name="Common.Open">Abrir</string>
     <string name="common.send">Enviar</string>
+    <string name="Common.Settings">Configuración</string>
     <!-- Состояние подключения к сервису -->
     <string name="connection_state_connecting">Conectando...</string>
     <!-- Состояние отсутствия подключения -->
@@ -95,6 +97,7 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="menu_action_copy">Copiar link</string>
     <!-- Пункт меню "Cкачать" -->
     <string name="menu_action_download">Descargar</string>
+    <string name="Menu.Action.File">Archivo</string>
     <!-- Кнопка скачать для прикрепленного документа/файла -->
     <string name="message_download">Descargar</string>
     <!-- Системное сообщение о присоединении оператора к чату -->
